# HTP

./: ARCHITECTURE.md  AUDIT_REPORT.md  BENCHMARKS.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  SPECIFICATION.md  THEORY.md  build.rs
crypto/: algebra.rs  mod.rs  primes.rs
src/: lib.rs  main.rs
src/core/: affine.rs  algebra.rs  mod.rs  param.rs  primes.rs
src/net/: mod.rs  service.rs  transport.rs  wire.rs
src/topology/: folding.rs  mod.rs  tensor.rs
