[package]
name = "phtp-core"
version = "1.0.0"
edition = "2021"
authors = ["Phoenix Project <architect@phoenix.io>"]
license = "Proprietary"

[dependencies]
# 使用 rug (基于 GMP) 获得极致的大数性能
rug = { version = "1.19", features = ["integer", "serde"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
# 密码学哈希
blake3 = "1.4"
# 随机数 (用于 Fiat-Shamir 挑战)
rand = "0.8"
# 懒加载 (用于全局参数)
once_cell = "1.18"
