# COPYRIGHT (C) 2025 M-Patek. ALL RIGHTS RESERVED.

[package]
name = "htp-core"
version = "1.0.1" # Version Bump for Security Fixes
edition = "2021"
authors = ["M-Patek Research <architect@m-patek.io>"]
default-run = "htp-node"

# 定义两个可执行文件
[[bin]]
name = "htp-node"
path = "src/bin/node.rs"

[[bin]]
name = "htp-cli"
path = "src/bin/client.rs"

[dependencies]
rug = { version = "1.19", features = ["integer", "serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake3 = "1.4"
quinn = "0.10"
tokio = { version = "1.28", features = ["full"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
colored = "2.0"
anyhow = "1.0"
rcgen = "0.11" # [Added] For ephemeral certificate generation
